@@ -1,3 +1,8 @@
+Tue Jan 26 02:25:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (rb_str_split): add rdoc.
+	  patched by Hugh Sasse [ruby-core:27819]
+
 Mon Jan 25 23:24:26 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/ruby/test_string.rb (test_split): add tests.
